--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <script defer src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release/build/highlight.min.js"></script>
+  <script defer
+    src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/languages/arduino.min.js"></script>
+
 </head>
 
 <body>
