fix: expand head section, add more meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>StealthyDev</title>
+  <title>Stealthy Dev</title>
   <base href="/" />
+  <meta property="og:title" content="Stealthy dev" />
+  <meta name="theme-color" content="#432a62">
+  <meta property="og:url" content="https://blog.stealthninja.me/">
+  <meta name="twitter:card" content="https://stealthy-if3xwqxgn-realstealthninjas-projects.vercel.app/">
+  <meta property="og:description" content="stealthninja's website where he and his friends write blogs, upload his poetry and rant about random things">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <script defer src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release/build/highlight.min.js"></script>
