--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Stealthy dev" />
   <meta name="theme-color" content="#432a62">
   <meta property="og:url" content="https://blog.stealthninja.me/">
-  <meta name="twitter:card" content="https://stealthy-if3xwqxgn-realstealthninjas-projects.vercel.app/">
+  <meta property="og:image" content="https://stealthy-if3xwqxgn-realstealthninjas-projects.vercel.app/">
   <meta property="og:description" content="stealthninja's website where he and his friends write blogs, upload his poetry and rant about random things">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
